--- a/pages/global.css
+++ b/pages/global.css
@@ -74,7 +74,7 @@ h1 {
   font-size:74px;
   line-height: 83px;
   line-height: 1.125;
-  margin: 16px 0;
+  margin: 16px 0 0 16px;;
   text-align: left;
 }
 h4.subtitle {
