--- a/components/PromptGenerator.module.css
+++ b/components/PromptGenerator.module.css
@@ -1,5 +1,5 @@
 .prompt {
-  flex: 0 0 440px;
+  flex: 0 0 500px;
   margin-top: 20px;
   padding: 16px 16px 32px;
   align-items: center;
@@ -9,6 +9,9 @@
 .promptlabel {
   display: flex;
  
+}
+.form {
+  margin-bottom: 24px;
 }
 .formtitle {
   margin-top: 0;
@@ -47,7 +50,7 @@
 
 .question {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   margin-bottom: 20px;
   align-items: center;
 }
@@ -67,9 +70,3 @@ p.response  {
   border-radius: 8px;
 }
 
-@media only screen and (max-width: 840px) {
-
-  .question {
-    justify-content:flex-start;
-  }
-}
