--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -13,6 +13,9 @@
   font-weight: bold;
   font-style: normal;
 }
+.app-content{
+  padding: 20px;
+}
 .main,
 .main input {
   font-size: 16px;
@@ -35,33 +38,52 @@
   font-weight: bold;
   color: #202123;
   margin: 16px 0 40px;
+  text-transform: uppercase;
 }
 .main form {
   display: flex;
   flex-direction: column;
-  width: 320px;
+  width: 100%;
+  max-width: 768px;
 }
 .main input[type="text"] {
   padding: 12px 16px;
   border: 1px solid #10a37f;
+  box-sizing: border-box;
   border-radius: 4px;
   margin-bottom: 24px;
   outline-color: #10a37f;
+  width: 100%;
+  margin:20px auto;
 }
 .main ::placeholder {
   color: #8e8ea0;
   opacity: 1;
 }
 .main input[type="submit"] {
-  padding: 12px 0;
-  color: #fff;
-  background-color: #10a37f;
-  border: none;
-  border-radius: 4px;
-  text-align: center;
-  cursor: pointer;
+    padding: 12px 0;
+    color: #fff;
+    border: 1px solid #10a37f;
+    border-radius: 4px;
+    text-align: center;
+    cursor: pointer;
+    height: 49px;
+    width: 65px;
+    margin: auto;
 }
 .main .result {
   font-weight: bold;
   margin-top: 40px;
 }
+.main table, .main tr, .main td {
+    border: 1px solid #333;
+    width: 100%;
+    border-radius: 7px;
+    margin: 20px;
+    padding: 10px;
+}
+.main td{
+  background: #ededed;
+  font-weight: bold;
+}
+
