Writing logic of my AI and small changes to the UX.

--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -1,24 +1,9 @@
-@font-face {
-  font-family: "ColfaxAI";
-  src: url(https://cdn.openai.com/API/fonts/ColfaxAIRegular.woff2)
-      format("woff2"),
-    url(https://cdn.openai.com/API/fonts/ColfaxAIRegular.woff) format("woff");
-  font-weight: normal;
-  font-style: normal;
-}
-@font-face {
-  font-family: "ColfaxAI";
-  src: url(https://cdn.openai.com/API/fonts/ColfaxAIBold.woff2) format("woff2"),
-    url(https://cdn.openai.com/API/fonts/ColfaxAIBold.woff) format("woff");
-  font-weight: bold;
-  font-style: normal;
-}
 .main,
 .main input {
   font-size: 16px;
   line-height: 24px;
   color: #353740;
-  font-family: "ColfaxAI", Helvetica, sans-serif;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 .main {
   display: flex;
@@ -33,7 +18,7 @@
   font-size: 32px;
   line-height: 40px;
   font-weight: bold;
-  color: #202123;
+  color: #db3300;
   margin: 16px 0 40px;
 }
 .main form {
@@ -43,10 +28,10 @@
 }
 .main input[type="text"] {
   padding: 12px 16px;
-  border: 1px solid #10a37f;
+  border: 1px solid #db3300;
   border-radius: 4px;
   margin-bottom: 24px;
-  outline-color: #10a37f;
+  outline-color: #db3300;
 }
 .main ::placeholder {
   color: #8e8ea0;
@@ -54,14 +39,16 @@
 }
 .main input[type="submit"] {
   padding: 12px 0;
-  color: #fff;
-  background-color: #10a37f;
-  border: none;
+  color: white;
+  background-color: #db3300;
   border-radius: 4px;
   text-align: center;
   cursor: pointer;
+  border: none;
+  font-weight: 600;
 }
 .main .result {
-  font-weight: bold;
-  margin-top: 40px;
+  margin: 40px auto 20px;
+  width: 320px;
+
 }
