--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -1,7 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 @font-face {
   font-family: "ColfaxAI";
   src: url(https://cdn.openai.com/API/fonts/ColfaxAIRegular.woff2)
@@ -32,7 +28,7 @@
   padding-top: 60px;
 }
 .main .icon {
-  width: 34px;
+  /* width: 34px; */
 }
 .main h3 {
   font-size: 32px;
@@ -44,13 +40,23 @@
 .main form {
   display: flex;
   flex-direction: column;
-  width: 320px;
+  width: 500px;
+}
+.main h5 {
+  margin-bottom: 8px;
 }
 .main input[type="text"] {
   padding: 12px 16px;
   border: 1px solid #10a37f;
   border-radius: 4px;
-  margin-bottom: 24px;
+  margin-bottom: 8px;
+  outline-color: #10a37f;
+}
+.main textarea {
+  padding: 12px 16px;
+  border: 1px solid #10a37f;
+  border-radius: 4px;
+  margin-bottom: 8px;
   outline-color: #10a37f;
 }
 .main ::placeholder {
@@ -68,5 +74,15 @@
 }
 .main .result {
   font-weight: bold;
-  margin-top: 40px;
+  width: 500px;
+  background-color: #fff;
+}
+
+.main .box_container {
+  display: flex;
+  width: 1020px;
+  gap: 20px;
+}
+.main .box {
+  width: 500px;
 }
