--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -15,6 +15,7 @@
 }
 
 .main,
+.main textarea,
 .main input {
   font-size: 16px;
   line-height: 24px;
@@ -45,13 +46,7 @@
 .main h5 {
   margin-bottom: 8px;
 }
-.main input[type="text"] {
-  padding: 12px 16px;
-  border: 1px solid #10a37f;
-  border-radius: 4px;
-  margin-bottom: 8px;
-  outline-color: #10a37f;
-}
+.main input[type="text"],
 .main textarea {
   padding: 12px 16px;
   border: 1px solid #10a37f;
@@ -60,7 +55,7 @@
   outline-color: #10a37f;
 }
 .main ::placeholder {
-  color: #8e8ea0;
+  color: #7da08a;
   opacity: 1;
 }
 .main input[type="submit"] {
@@ -76,6 +71,11 @@
   font-weight: bold;
   width: 500px;
   background-color: #fff;
+}
+.main span.req {
+  color: red;
+  font-weight: bold;
+  font-size: 16px;
 }
 
 .main .box_container {
