--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -27,7 +27,7 @@
   padding-top: 60px;
 }
 .main .icon {
-  width: 34px;
+  width: 500px;
 }
 .main h3 {
   font-size: 32px;
@@ -64,4 +64,12 @@
 .main .result {
   font-weight: bold;
   margin-top: 40px;
+}
+.vic{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #0f9775;
+  color: #fff;
+  text-size-adjust:bold;
 }
